floodplain-core/src/main/java/com/dexels/navajo/parser/compiled/CompiledParser.java
/* Generated By:JJTree&JavaCC: Do not edit this line. CompiledParser.java */
package com.dexels.navajo.parser.compiled;

import com.dexels.navajo.parser.*;

public class CompiledParser/*@bgen(jjtree)*/implements CompiledParserTreeConstants, CompiledParserConstants {/*@bgen(jjtree)*/
  protected JJTCompiledParserState jjtree = new JJTCompiledParserState();
        public JJTCompiledParserState getJJTree() {
                return jjtree;
        }

  final public void ListExpression() throws ParseException {
     ASTListNode jjtn001 = new ASTListNode(JJTLISTNODE);
     boolean jjtc001 = true;
     jjtree.openNodeScope(jjtn001);
     jjtn001.jjtSetFirstToken(getToken(1));
    try {
      jj_consume_token(BEGIN_LIST);
      if (jj_2_2(2)) {
        Expression();
                                  jjtn001.args++;
        label_1:
        while (true) {
          if (jj_2_1(2)) {
            ;
          } else {
            break label_1;
          }
          jj_consume_token(LIST_SEPARATOR);
          Expression();
                                                                                   jjtn001.args++;
        }
      } else {
        ;
      }
      jj_consume_token(END_LIST);
    } catch (Throwable jjte001) {
     if (jjtc001) {
       jjtree.clearNodeScope(jjtn001);
       jjtc001 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte001 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte001;}
     }
     if (jjte001 instanceof ParseException) {
       {if (true) throw (ParseException)jjte001;}
     }
     {if (true) throw (Error)jjte001;}
    } finally {
     if (jjtc001) {
       jjtree.closeNodeScope(jjtn001, true);
       jjtn001.jjtSetLastToken(getToken(0));
     }
    }
  }

  final public void Expression() throws ParseException {
    if (jj_2_3(2)) {
      OrExpression();
    } else if (jj_2_4(2)) {
      PipeDefinition();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public ASTPipeDefinition PipeDefinition() throws ParseException {
 /*@bgen(jjtree) PipeDefinition */
  ASTPipeDefinition jjtn000 = new ASTPipeDefinition(JJTPIPEDEFINITION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
    try {
      if (jj_2_7(2)) {
        jj_consume_token(PIPE);
                jjtn000.partial = true;
        OrExpression();
                                                          jjtn000.args++;
        label_2:
        while (true) {
          if (jj_2_5(2)) {
            ;
          } else {
            break label_2;
          }
          jj_consume_token(PIPE);
          OrExpression();
                                                                                                  jjtn000.args++;
        }
                                                                                                                       jjtree.closeNodeScope(jjtn000, true);
                                                                                                                       jjtc000 = false;
                                                                                                                       jjtn000.jjtSetLastToken(getToken(0));
                                                                                                                      {if (true) return jjtn000;}
      } else if (jj_2_8(2)) {
        jj_consume_token(PIPESTART);
                       jjtn000.partial = false;
        OrExpression();
                                                                 jjtn000.args++;
        label_3:
        while (true) {
          if (jj_2_6(2)) {
            ;
          } else {
            break label_3;
          }
          jj_consume_token(PIPE);
          OrExpression();
                                                                                                          jjtn000.args++;
        }
                                                                                                                               jjtree.closeNodeScope(jjtn000, true);
                                                                                                                               jjtc000 = false;
                                                                                                                               jjtn000.jjtSetLastToken(getToken(0));
                                                                                                                              {if (true) return jjtn000;}
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
            jjtn000.jjtSetLastToken(getToken(0));
          }
    }
    throw new Error("Missing return statement in function");
  }

  final public void ReactiveScript() throws ParseException {
          ASTReactiveScriptNode jjtn001 = new ASTReactiveScriptNode(JJTREACTIVESCRIPTNODE);
          boolean jjtc001 = true;
          jjtree.openNodeScope(jjtn001);
          jjtn001.jjtSetFirstToken(getToken(1));
    try {
      if (jj_2_11(2)) {
        jj_consume_token(HEADER);
                           jjtn001.hasHeader = true;
        jj_consume_token(45);
        if (jj_2_10(2)) {
          KeyValue();
                                                                        jjtn001.headers++;
          label_4:
          while (true) {
            if (jj_2_9(2)) {
              ;
            } else {
              break label_4;
            }
            jj_consume_token(LIST_SEPARATOR);
            KeyValue();
                                                                                                             jjtn001.headers++;
          }
        } else {
          ;
        }
        jj_consume_token(46);
      } else {
        ;
      }
      if (jj_2_12(2)) {
        PipeDefinition();
                            jjtn001.args++;
      } else if (jj_2_13(2)) {
        KeyValue();
                      jjtn001.args++;
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      label_5:
      while (true) {
        if (jj_2_14(2)) {
          ;
        } else {
          break label_5;
        }
        if (jj_2_15(2)) {
          PipeDefinition();
                                          jjtn001.args++;
        } else if (jj_2_16(2)) {
          KeyValue();
                                  jjtn001.args++;
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } catch (Throwable jjte001) {
          if (jjtc001) {
            jjtree.clearNodeScope(jjtn001);
            jjtc001 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte001 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte001;}
          }
          if (jjte001 instanceof ParseException) {
            {if (true) throw (ParseException)jjte001;}
          }
          {if (true) throw (Error)jjte001;}
    } finally {
          if (jjtc001) {
            jjtree.closeNodeScope(jjtn001, true);
            jjtn001.jjtSetLastToken(getToken(0));
          }
    }
    jj_consume_token(0);
  }

  final public void OrExpression() throws ParseException {
    AndExpression();
    label_6:
    while (true) {
      if (jj_2_17(2)) {
        ;
      } else {
        break label_6;
      }
      jj_consume_token(OR);
           ASTOrNode jjtn001 = new ASTOrNode(JJTORNODE);
           boolean jjtc001 = true;
           jjtree.openNodeScope(jjtn001);
           jjtn001.jjtSetFirstToken(getToken(1));
      try {
        AndExpression();
      } catch (Throwable jjte001) {
           if (jjtc001) {
             jjtree.clearNodeScope(jjtn001);
             jjtc001 = false;
           } else {
             jjtree.popNode();
           }
           if (jjte001 instanceof RuntimeException) {
             {if (true) throw (RuntimeException)jjte001;}
           }
           if (jjte001 instanceof ParseException) {
             {if (true) throw (ParseException)jjte001;}
           }
           {if (true) throw (Error)jjte001;}
      } finally {
           if (jjtc001) {
             jjtree.closeNodeScope(jjtn001,  2);
             jjtn001.jjtSetLastToken(getToken(0));
           }
      }
    }
  }

  final public void AndExpression() throws ParseException {
    EqualityExpression();
    label_7:
    while (true) {
      if (jj_2_18(2)) {
        ;
      } else {
        break label_7;
      }
      jj_consume_token(AND);
            ASTAndNode jjtn001 = new ASTAndNode(JJTANDNODE);
            boolean jjtc001 = true;
            jjtree.openNodeScope(jjtn001);
            jjtn001.jjtSetFirstToken(getToken(1));
      try {
        EqualityExpression();
      } catch (Throwable jjte001) {
            if (jjtc001) {
              jjtree.clearNodeScope(jjtn001);
              jjtc001 = false;
            } else {
              jjtree.popNode();
            }
            if (jjte001 instanceof RuntimeException) {
              {if (true) throw (RuntimeException)jjte001;}
            }
            if (jjte001 instanceof ParseException) {
              {if (true) throw (ParseException)jjte001;}
            }
            {if (true) throw (Error)jjte001;}
      } finally {
            if (jjtc001) {
              jjtree.closeNodeScope(jjtn001,  2);
              jjtn001.jjtSetLastToken(getToken(0));
            }
      }
    }
  }

  final public void EqualityExpression() throws ParseException {
    RelationalExpression();
    label_8:
    while (true) {
      if (jj_2_19(2)) {
        ;
      } else {
        break label_8;
      }
      if (jj_2_20(2)) {
        jj_consume_token(EQUALS);
               ASTEQNode jjtn001 = new ASTEQNode(JJTEQNODE);
               boolean jjtc001 = true;
               jjtree.openNodeScope(jjtn001);
               jjtn001.jjtSetFirstToken(getToken(1));
        try {
          RelationalExpression();
        } catch (Throwable jjte001) {
               if (jjtc001) {
                 jjtree.clearNodeScope(jjtn001);
                 jjtc001 = false;
               } else {
                 jjtree.popNode();
               }
               if (jjte001 instanceof RuntimeException) {
                 {if (true) throw (RuntimeException)jjte001;}
               }
               if (jjte001 instanceof ParseException) {
                 {if (true) throw (ParseException)jjte001;}
               }
               {if (true) throw (Error)jjte001;}
        } finally {
               if (jjtc001) {
                 jjtree.closeNodeScope(jjtn001,  2);
                 jjtn001.jjtSetLastToken(getToken(0));
               }
        }
      } else if (jj_2_21(2)) {
        jj_consume_token(NOT_EQUALS);
                  ASTNENode jjtn002 = new ASTNENode(JJTNENODE);
                  boolean jjtc002 = true;
                  jjtree.openNodeScope(jjtn002);
                  jjtn002.jjtSetFirstToken(getToken(1));
        try {
          RelationalExpression();
        } catch (Throwable jjte002) {
                  if (jjtc002) {
                    jjtree.clearNodeScope(jjtn002);
                    jjtc002 = false;
                  } else {
                    jjtree.popNode();
                  }
                  if (jjte002 instanceof RuntimeException) {
                    {if (true) throw (RuntimeException)jjte002;}
                  }
                  if (jjte002 instanceof ParseException) {
                    {if (true) throw (ParseException)jjte002;}
                  }
                  {if (true) throw (Error)jjte002;}
        } finally {
                  if (jjtc002) {
                    jjtree.closeNodeScope(jjtn002,  2);
                    jjtn002.jjtSetLastToken(getToken(0));
                  }
        }
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }
